--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <h2>Key Projects</h2>
     <div class="projects">
       <div class="project-card">
-        <img src="1,png" alt="Project 1">
+        <img src="1.png" alt="Project 1">
         <div>
           <h3>Operations Workflow Optimization</h3>
           <p>Coordinated multiple projects using Trello and Notion, streamlining reporting and reducing bottlenecks by 20%.</p>
