--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maira | Professional Portfolio</title>
+  <title>Maira | Product Owner Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     /* Reset & Base */
@@ -15,8 +15,6 @@
       background: linear-gradient(135deg, #1f1f1f, #2a2a2a);
       text-align: center;
       padding: 4rem 1rem;
-      position: relative;
-      overflow: hidden;
     }
     header h1 { font-size: 3rem; color: #76c7f0; margin-bottom: 0.5rem; }
     header p { font-size: 1.2rem; color: #ccc; margin-bottom: 1rem; }
@@ -89,7 +87,7 @@
 <body>
   <header>
     <h1>Maira</h1>
-    <p>Project & Operations Manager | Data-Driven Decision Making | Remote Work Specialist</p>
+    <p>Product Owner | Agile & Scrum Practitioner | Project & Operations Manager</p>
     <p>
       <a href="mailto:mairazzzz120@gmail.com">Email</a> |
       <a href="https://www.linkedin.com/in/mayra-m-198b58241/" target="_blank">LinkedIn</a>
@@ -98,50 +96,57 @@
 
   <section class="fade-in">
     <h2>Professional Summary</h2>
-    <p>I am a results-driven <strong>Project and Operations Manager</strong> with over 4 years of remote experience managing distributed teams and delivering projects on time. I specialize in coordinating workflows, ensuring stakeholder alignment, and applying data-driven insights to improve decision-making. With strong knowledge of project management tools and foundational technical expertise in data and cloud, I bridge communication between business teams and technical specialists, ensuring smooth execution and measurable impact.</p>
+    <p>I am a dedicated <strong>Product Owner & Agile Project Manager</strong> with 4+ years of remote experience. Skilled in <strong>Scrum, Kanban, backlog management, and stakeholder communication</strong>, I specialize in turning business needs into actionable roadmaps. Proficient with tools such as <strong>Asana, Jira, Trello, Notion, and ClickUp</strong>, I bridge strategy and execution while ensuring teams deliver maximum value. With a mix of product mindset, project execution, and technical awareness, I thrive in cross-functional environments where agility and impact matter most.</p>
   </section>
 
   <section class="fade-in">
     <h2>Key Projects</h2>
     <div class="projects">
       <div class="project-card">
-        <img src="1.png" alt="Operations Workflow Optimization">
+        <img src="1.png" alt="Agile Project Delivery">
         <div>
-          <h3>Operations Workflow Optimization</h3>
-          <p>Coordinated multiple projects using Trello and Notion, streamlining reporting and reducing bottlenecks by 20%.</p>
+          <h3>Agile Project Delivery</h3>
+          <p>Led Scrum ceremonies (sprint planning, reviews, retrospectives) and managed product backlog in Jira, resulting in 95% on-time sprint completion rate.</p>
         </div>
       </div>
       <div class="project-card">
-        <img src="2.png" alt="Business Performance Dashboard">
+        <img src="2.png" alt="Cross-Functional Collaboration">
         <div>
-          <h3>Business Performance Dashboard</h3>
-          <p>Designed dashboards to provide leadership with real-time KPIs for faster and more informed decision-making.</p>
+          <h3>Cross-Functional Collaboration</h3>
+          <p>Coordinated with marketing, sales, and engineering via Asana and Notion, improving alignment and reducing feature delivery delays by 18%.</p>
         </div>
       </div>
       <div class="project-card">
-        <img src="3.png" alt="Customer Retention Program">
+        <img src="3.png" alt="Process Improvement Initiative">
         <div>
-          <h3>Customer Retention Program</h3>
-          <p>Worked cross-functionally with marketing to use churn insights and implemented campaigns that improved retention by 12%.</p>
+          <h3>Process Improvement Initiative</h3>
+          <p>Introduced Kanban boards in Trello to visualize workflows, cutting cycle times and boosting team productivity by 20%.</p>
         </div>
       </div>
       <div class="project-card">
-        <img src="4.png" alt="Cloud Readiness Pilot">
+        <img src="4.png" alt="Data-Driven Product Insights">
         <div>
-          <h3>Cloud Readiness Pilot</h3>
-          <p>Collaborated with technical teams to manage deployment of a demo cloud infrastructure with Terraform and Docker.</p>
+          <h3>Data-Driven Product Insights</h3>
+          <p>Designed dashboards with SQL and Power BI, helping leadership prioritize features based on customer usage metrics and KPIs.</p>
         </div>
       </div>
     </div>
   </section>
 
   <section class="fade-in">
-    <h2>Case Study</h2>
+    <h2>Case Studies</h2>
     <div class="case-study">
-      <h3>Customer Retention Analysis</h3>
-      <p><strong>Challenge:</strong> High customer churn was impacting revenue stability.</p>
-      <p><strong>Solution:</strong> Built a churn prediction model with Python and SQL, and developed dashboards to monitor retention KPIs in real time.</p>
-      <p><strong>Impact:</strong> Helped management identify at-risk customer segments and implement targeted campaigns, reducing churn by 12%.</p>
+      <h3>Backlog Prioritization for SaaS Product</h3>
+      <p><strong>Challenge:</strong> Development team faced delays due to unclear priorities.</p>
+      <p><strong>Solution:</strong> Collaborated with stakeholders to create a value-based backlog in Jira, writing user stories and acceptance criteria.</p>
+      <p><strong>Impact:</strong> Increased clarity for developers and cut release delays by 25%.</p>
+    </div>
+
+    <div class="case-study">
+      <h3>Remote Scrum Implementation</h3>
+      <p><strong>Challenge:</strong> Distributed team struggled with coordination.</p>
+      <p><strong>Solution:</strong> Introduced Scrum ceremonies via Zoom and Asana; used Notion for documentation.</p>
+      <p><strong>Impact:</strong> Improved collaboration, boosting team satisfaction and sprint velocity.</p>
     </div>
   </section>
 
@@ -149,20 +154,20 @@
     <h2>Skills & Tools</h2>
     <div class="skills">
       <div class="skill-card">
-        <h3>Project Management</h3>
-        <p>Trello, Notion, ClickUp, Jira, Google Workspace</p>
+        <h3>Agile & Product</h3>
+        <p>Scrum, Kanban, Backlog Grooming, User Stories, Sprint Planning</p>
       </div>
       <div class="skill-card">
-        <h3>Data Analysis</h3>
-        <p>Python, SQL, Power BI (dashboards, KPIs, forecasting)</p>
+        <h3>Project Management Tools</h3>
+        <p>Jira, Asana, Trello, Notion, ClickUp, Confluence</p>
       </div>
       <div class="skill-card">
-        <h3>Cloud & Collaboration</h3>
-        <p>Docker, Terraform (basic knowledge), Slack, Microsoft Teams</p>
+        <h3>Data & Cloud Awareness</h3>
+        <p>SQL, Power BI, Docker, Terraform (basic knowledge)</p>
       </div>
       <div class="skill-card">
         <h3>Core Strengths</h3>
-        <p>Remote Collaboration, Communication, Process Improvement, Risk Management, Reporting</p>
+        <p>Stakeholder Communication, Remote Collaboration, Prioritization, Process Improvement</p>
       </div>
     </div>
   </section>
