--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
       <div class="skill-card">
         <h3>Data & Cloud Awareness</h3>
-        <p>SQL, Power BI, Docker, Terraform (basic knowledge)</p>
+        <p>SQL, Power BI,Python,ML algotithms ,Tableau ,Spark(basic knowledge) Docker, Terraform (basic knowledge)</p>
       </div>
       <div class="skill-card">
         <h3>Core Strengths</h3>
