--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
         <h3>Core Strengths</h3>
         <p>Stakeholder Communication, Remote Collaboration, Prioritization, Process Improvement</p>
       </div>
+       <div class="skill-card">
+      <h3>Administrative & VA Skills</h3>
+      <p>Calendar & Email Management, File & Document Organization, Data Entry, Client Communication, Meeting Coordination, Report Preparation, Internet Research</p>
+    </div>
+    <div class="skill-card">
+      <h3>Technical Tools for VA Roles</h3>
+      <p>Google Workspace (Docs, Sheets, Drive, Gmail, Calendar), Microsoft Office (Word, Excel, PowerPoint, Outlook), Zoom, Microsoft Teams, CRM tools (HubSpot, Zoho)</p>
+    </div>
     </div>
   </section>
 
